// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button passes props correctly 1`] = `
<button
  className="lui-button my-class"
  data-x="x"
  onClick={[MockFunction]}
  title="Title"
>
  Text
</button>
`;

exports[`Button with modifiers renders correctly 1`] = `
<button
  className="lui-button lui-button--success lui-button--large lui-button--block lui-button--rounded"
  value="Value"
/>
`;

exports[`Button with states renders correctly 1`] = `
<button
  className="lui-button lui-active"
  disabled={true}
  value="Value"
/>
`;

exports[`Button with subcomponents renders correctly 1`] = `
<button
  className="lui-button"
>
  <span
    aria-hidden="true"
    className="lui-icon lui-icon--more lui-button__icon"
  />
  <span
    className="lui-button__text"
  >
    Text
  </span>
  <span
    className="lui-button__caret  lui-caret"
  />
</button>
`;

exports[`Normal button renders correctly 1`] = `
<button
  className="lui-button"
>
  Text
</button>
`;
